xln-security/newtest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod1
  labels:
    app: my-app
    env: dev
spec:
  containers:
  - name: nginx
    image: nginx
