xln-security/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-valid
  labels:
    app: my-app
    env: dev
spec:
  containers:
  - name: nginx
    image: nginx
